--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,8 +5,8 @@
 # prevent it from being included in the site.
 
 main:
-  - title: "News"
-    url: /news/    
+  - title: "Posts"
+    url: /posts/    
     
   - title: "Publications"
     url: /publications/
