--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,6 +7,8 @@
 main:
   - title: "Posts"
     url: /posts/    
+    # - title: "Blog Posts"
+  #   url: /year-archive/
     
   - title: "Publications"
     url: /publications/
