--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,9 +7,9 @@
 main:
   - title: "Posts"
     url: /posts/    
-    
-    - title: "Blog Posts"
-    url: /year-archive/
+
+    # - title: "Blog Posts"
+    # url: /year-archive/
     
   - title: "Publications"
     url: /publications/
