--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   avatar           : "profile.png"
   name             : "Feihong Liu (Reed)"
   pronouns         : "he/him"
-  bio              : "Graduate"
+  bio              : "Ph.D"
   location         : "State College"
   employer         : "The Pennsylvania State University"
   uri              : # URL
