--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ author:
   pronouns         : "he/him"
   bio              : "Ph.D"
   location         : "State College"
-  employer         : "The Pennsylvania State University"
+  employer         : "Pennsylvania State University"
   uri              : # URL
   email            : "fml5147@psu.edu" 
 
